# xbocontroller-winapi

./: .gitignore  CMakeLists.txt  LICENSE  font.cpp  font.h  gamepad.cpp  gamepad.h  images.cpp  images.h  main.cpp  resources.cpp  resources.h  resources.rc
winrt/: Windows.AI.MachineLearning.Preview.h  Windows.AI.MachineLearning.h  Windows.ApplicationModel.Activation.h  Windows.ApplicationModel.AppExtensions.h  Windows.ApplicationModel.AppService.h  Windows.ApplicationModel.Appointments.AppointmentsProvider.h  Windows.ApplicationModel.Appointments.DataProvider.h  Windows.ApplicationModel.Appointments.h  Windows.ApplicationModel.Background.h  Windows.ApplicationModel.Calls.Background.h  Windows.ApplicationModel.Calls.Provider.h  Windows.ApplicationModel.Calls.h  Windows.ApplicationModel.Chat.h  Windows.ApplicationModel.CommunicationBlocking.h  Windows.ApplicationModel.Contacts.DataProvider.h  Windows.ApplicationModel.Contacts.Provider.h  Windows.ApplicationModel.Contacts.h  Windows.ApplicationModel.ConversationalAgent.h  Windows.ApplicationModel.Core.h  Windows.ApplicationModel.DataTransfer.DragDrop.Core.h  Windows.ApplicationModel.DataTransfer.DragDrop.h  Windows.ApplicationModel.DataTransfer.ShareTarget.h  Windows.ApplicationModel.DataTransfer.h  Windows.ApplicationModel.Email.DataProvider.h  Windows.ApplicationModel.Email.h  Windows.ApplicationModel.ExtendedExecution.Foreground.h  Windows.ApplicationModel.ExtendedExecution.h  Windows.ApplicationModel.LockScreen.h  Windows.ApplicationModel.Payments.Provider.h  Windows.ApplicationModel.Payments.h  (+290 more)
(+383 files in other folders)
